[gd_scene load_steps=8 format=3 uid="uid://cnvh2feiwpswh"]

[ext_resource type="Script" uid="uid://brobbfekike3n" path="res://scripts/menu.gd" id="1_xdvgc"]
[ext_resource type="FontFile" uid="uid://bmijv3qthw6as" path="res://assets/Fonts/Perfect DOS VGA 437 Win.ttf" id="2_upctu"]
[ext_resource type="Texture2D" uid="uid://bog7t5alywxqn" path="res://assets/Background/Menu_background.png" id="3_11y2r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_11y2r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o0tnf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jmdev"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b6cxs"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -132.0
offset_right = 19.0
offset_bottom = -132.0
grow_vertical = 0
script = ExtResource("1_xdvgc")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
layout_mode = 0
offset_left = -19.0
offset_top = -516.0
offset_right = 1133.0
offset_bottom = 129.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Close_button")
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_styles/normal = SubResource("StyleBoxTexture_11y2r")
text = "Start"

[node name="Option_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_styles/normal = SubResource("StyleBoxTexture_o0tnf")
text = "Option"

[node name="Score_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_styles/normal = SubResource("StyleBoxTexture_jmdev")
text = "View Score
"

[node name="Close_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start_button")
theme_override_fonts/font = ExtResource("2_upctu")
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_b6cxs")
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = -17.0
offset_top = -516.0
offset_right = 1131.0
offset_bottom = 129.0
texture = ExtResource("3_11y2r")
expand_mode = 1

[connection signal="pressed" from="VBoxContainer/Start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Option_button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Score_button" to="." method="_on_score_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Close_button" to="." method="_on_close_button_pressed"]
